--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ group "temp"
 repositories {
     mavenCentral()
     maven { url "https://jcenter.bintray.com" }
+    maven { url "https://oss.jfrog.org/oss-snapshot-local" }
 }
 
 configurations {
